# code-execution-mcp

./: .gitignore  LICENSE  README.md  build.txt  code_execution_tool.py  main.py  pyproject.toml
code_execution_mcp/: code_execution_tool.py  main.py
code_execution_mcp/helpers/: log.py  shell_local.py  strings.py  tty_session.py
helpers/: __init__.py  clean_string.py  log.py  print_style.py  shell_local.py  shell_utils.py  strings.py
