[project]
name = "code-execution-mcp"
version = "0.1.3"
description = "MCP server exposing Agent Zero's code execution capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "ipython>=8.0.0",
    "webcolors>=1.13.0",
    "nest_asyncio>=1.6.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]

[project.scripts]
code-execution-mcp = "code_execution_mcp.main:main"

[tool.setuptools]
py-modules = ["code_execution_mcp.main", "code_execution_mcp.code_execution_tool"]
include-package-data = true

[tool.setuptools.package-data]
"code_execution_mcp" = ["prompts/*.md"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
